footer social plugin spacing fix

--- a/wp-content/themes/datatrak/core/css/master.css
+++ b/wp-content/themes/datatrak/core/css/master.css
@@ -771,6 +771,3 @@ html, body {
 #footer .cnss-social-icon {
   margin: 0 auto 0 auto !important;
 }
-#footer .cnss-social-icon tbody tr td {
-  padding-left: 26px !important;
-}
