--- a/wp-content/themes/datatrak/core/sass/footer.scss
+++ b/wp-content/themes/datatrak/core/sass/footer.scss
@@ -104,10 +104,6 @@ $footer-background-color: #252523;
 
 	.cnss-social-icon {
 		margin: 0 auto 0 auto !important;
-
-		tbody tr td {
-			padding-left: 26px !important;
-		}
 	}
 
 	padding-bottom: 73px;
